# arpro_open_projects

./: CMakeLists.txt  README.md
include/: boat.h  cell.h  player.h
src/: main.cpp  player.cpp  rps.cpp  sticks.cpp
